--- a/themes/achp/sass/features/_header.scss
+++ b/themes/achp/sass/features/_header.scss
@@ -214,8 +214,9 @@ header {
 
     #header_widescreen_search_bar {
       @include span-columns(3 of 12);
-      @include shift(3);
+      /*@include shift(3);*/
       float: right;
+      width: 26.5%;
     }
   }
 }
