--- a/themes/achp/sass/features/_header_menu.scss
+++ b/themes/achp/sass/features/_header_menu.scss
@@ -110,7 +110,7 @@
       ul[data-menu-level="1"] {
         background-color: white;
         margin: 0;
-        padding: 0 5px 10px 15px;
+        padding: 0 10px 10px 25px;
 
         &.menu_selected {
           border: $header-menu-border-width solid $color-red2;
